# Geometry

Lightstage_geometry/: CMakeLists.txt  main.cpp
mesh_opt/: main.cpp  mesh_opt.pro
